
- rewrote Path object: the internals have completely changed. 
  There have been some  incompatible changes with previous versions
  but its now much closer to what I envisaged for the object
  Changes:
    - C() no longer takes numerical arguments
    - Path() no longer sublasses Area (this doesn't make sense really)
      so the points n,ne,e ... etc are not available for this object
      use either bbox() method or group and Area object with the path
  Additions:
    - Path takes 'relative' points R(), these are the same as P() but
      will be intepreted as relative to last point.
    - C() takes relative control points with R(). The first is relative
      the start the second to the end of the curve
    - path.length returns the length of the path (local co-ord system)
    - path.P(f) returns the point on the curve at fraction f of it's 
      length
- fixed bug with defaults for linewidth etc not being taken up
  (thanks Marcus)
- object reference returned from group's append, insert and reverse
  This makes for convenient one liners
- Group() now has a reverse() function
- Pages now produces global BoundinBox and Orientation comments
- Fixed minor bug in Align, when passed single object

0.4
~~~

- Rectangle now can have rounded corners (r=...)
- Rectangle can have an Area or Bbox in its contruction
  to set size and position eg r=Rectangle(g.bbox())
- Added a reflect() method to AffineObj
- Added a shear() method tho AffineObj
- Added an Eps object ... produces a self-contained eps, and this
  object is used to generate the actual eps. You can also nest them
  if you wanted to.
- Eps output now conforms to DSC 3.0!
- rewrote render to use Eps.
- Added Page() and Pages() objects .. pyscript can now do multi-page
  postscript (or A0 posters etc), which also conforms to DSC 3.0.
- Fixed some bugs with Text() handling of fonts and attributes changes
- Dot can now take x,y argument instead of point
- scale() can take a single number for both axes

0.3
~~~
